[package]
name = "hello_world"
version = "0.1.0"
authors = ["张世阳 <ZHANGSHIYANG162@pingan.com.cn>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.42"
js-sys = "0.3.20"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Window',
  'console',
]